// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the VideoTrackInfo component should render correctly for the LocalVideoTrack when both packetsSent and packetsLost are defined 1`] = `
<Fragment>
  <Memo(Datum)
    label="Dimensions"
    value="1280 x 720"
  />
  <Memo(Datum)
    label="isSwitchedOff"
    value="false"
  />
  <Memo(Datum)
    label="isEnabled"
    value="true"
  />
  <Memo(Datum)
    label="Bandwidth"
    value="1,234.56kbps"
  />
  <Memo(Datum)
    label="Codec"
    value="testCodec"
  />
  <Memo(Datum)
    label="Framerate"
    value="null"
  />
  <Memo(Datum)
    label="Packets Lost"
    value="56"
  />
  <Memo(Datum)
    label="Packet Loss Percentage"
    value="30.601%"
  />
</Fragment>
`;

exports[`the VideoTrackInfo component should render correctly for the LocalVideoTrack when packetsLost is 0 and packetsSent is defined 1`] = `
<Fragment>
  <Memo(Datum)
    label="Dimensions"
    value="1280 x 720"
  />
  <Memo(Datum)
    label="isSwitchedOff"
    value="false"
  />
  <Memo(Datum)
    label="isEnabled"
    value="true"
  />
  <Memo(Datum)
    label="Bandwidth"
    value="1,234.56kbps"
  />
  <Memo(Datum)
    label="Codec"
    value="testCodec"
  />
  <Memo(Datum)
    label="Framerate"
    value="null"
  />
  <Memo(Datum)
    label="Packets Lost"
    value="0"
  />
  <Memo(Datum)
    label="Packet Loss Percentage"
    value="0%"
  />
</Fragment>
`;

exports[`the VideoTrackInfo component should render correctly for the RemoteVideoTrack when both packetsReceived and packetsLost are defined 1`] = `
<Fragment>
  <Memo(Datum)
    label="Dimensions"
    value="1280 x 720"
  />
  <Memo(Datum)
    label="isSwitchedOff"
    value="false"
  />
  <Memo(Datum)
    label="isEnabled"
    value="true"
  />
  <Memo(Datum)
    label="Bandwidth"
    value="1,234.56kbps"
  />
  <Memo(Datum)
    label="Codec"
    value="testCodec"
  />
  <Memo(Datum)
    label="Framerate"
    value="null"
  />
  <Memo(Datum)
    label="Packets Lost"
    value="7"
  />
  <Memo(Datum)
    label="Packet Loss Percentage"
    value="7%"
  />
</Fragment>
`;

exports[`the VideoTrackInfo component should render correctly for the RemoteVideoTrack when packetsLost is 0 and packetsReceived is defined 1`] = `
<Fragment>
  <Memo(Datum)
    label="Dimensions"
    value="1280 x 720"
  />
  <Memo(Datum)
    label="isSwitchedOff"
    value="false"
  />
  <Memo(Datum)
    label="isEnabled"
    value="true"
  />
  <Memo(Datum)
    label="Bandwidth"
    value="1,234.56kbps"
  />
  <Memo(Datum)
    label="Codec"
    value="testCodec"
  />
  <Memo(Datum)
    label="Framerate"
    value="null"
  />
  <Memo(Datum)
    label="Packets Lost"
    value="0"
  />
  <Memo(Datum)
    label="Packet Loss Percentage"
    value="0%"
  />
</Fragment>
`;

exports[`the VideoTrackInfo component should render correctly for the RemoteVideoTrack when packetsLost is not defined 1`] = `
<Fragment>
  <Memo(Datum)
    label="Dimensions"
    value="1280 x 720"
  />
  <Memo(Datum)
    label="isSwitchedOff"
    value="false"
  />
  <Memo(Datum)
    label="isEnabled"
    value="true"
  />
  <Memo(Datum)
    label="Bandwidth"
    value="1,234.56kbps"
  />
  <Memo(Datum)
    label="Codec"
    value="testCodec"
  />
  <Memo(Datum)
    label="Framerate"
    value="null"
  />
  <Memo(Datum)
    label="Packets Lost"
    value="null"
  />
  <Memo(Datum)
    label="Packet Loss Percentage"
    value="undefined%"
  />
</Fragment>
`;

exports[`the VideoTrackInfo component should render correctly if a video track is present 1`] = `
<Fragment>
  <Memo(Datum)
    label="Dimensions"
    value="1280 x 720"
  />
  <Memo(Datum)
    label="isSwitchedOff"
    value="false"
  />
  <Memo(Datum)
    label="isEnabled"
    value="true"
  />
  <Memo(Datum)
    label="Bandwidth"
    value="1,234.56kbps"
  />
  <Memo(Datum)
    label="Codec"
    value="testCodec"
  />
  <Memo(Datum)
    label="Framerate"
    value="null"
  />
  <Memo(Datum)
    label="Packets Lost"
    value="7"
  />
  <Memo(Datum)
    label="Packet Loss Percentage"
    value="undefined%"
  />
</Fragment>
`;

exports[`the VideoTrackPublicationInfo component should render correctly 1`] = `
<styled.div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Memo(Datum)
    label="Name"
    value="testName"
  />
  <Memo(Datum)
    label="SID"
    value="testSid"
  />
  <Memo(Datum)
    label="isSubscribed"
    value="true"
  />
  <Memo(Datum)
    label="publishPriority"
    value="standard"
  />
  <VideoTrackInfo
    track="testTrack"
    trackSid="testSid"
  />
</styled.div>
`;
